# collectd-f103c

./: .pre-commit-config.yaml  .travis.yml  README.md  setup.cfg  setup.py  test-requirements.txt  tox.ini  types.db
collectd_f103c/: __init__.py
etc/collectd.d/: f103c.conf
f103c/: influx_feed.py
tests/: test_collectd_f103c.py
