[metadata]
name = collectd-f103c
author = Jaroslav Henner
author-email = jhenner@redhat.com
summary = Colelctd plugin for the f103c ADC on USB module
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
;home-page = https://TODO
;project_urls =
;    Bug Tracker = https://TODO
;    Documentation = https://TODO
;    Source Code = https://TODO
license = GNU GPL3
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Manufacturing
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    f103c adc usb collectd
[files]
packages = collectd_f103c
[entry_points]
console_scripts =
    f103c_influx_feed = f103c.influx_feed.main
